# lightning-hydra-template

./: README.md  pyproject.toml
configs/: train.yaml
configs/experiment/: example.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/hydra/: default.yaml
configs/hydra/launcher/: submitit_slurm.yaml
configs/logger/: many_loggers.yaml
configs/paths/: default.yaml
src/: eval.py  train.py
src/data/: mnist_datamodule.py
src/models/: mnist_module.py
src/models/components/: simple_dense_net.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_configs.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
