[project]
name = "bz-nc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "lightning>=2.5.0.post0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "rootutils>=1.0.7",
    "sh>=2.2.2",
    "torch>=2.5.1",
    "torchvision==0.20.1",
    "wandb>=0.19.5",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
markers = ["slow: slow tests"]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
