[project]
name = "lightning-hydra-template-rishabhW"
version = "0.1.0"
description = "My fork of the lightning hydra template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "mlflow>=3.4.0",
    "nbformat>=5.10.4",
    "plotly[express]>=6.3.1",
    "polars>=1.34.0",
    "rich>=13.9.4",
    "rootutils>=1.0.7",
    "sh>=2.2.2",
    "torch>=2.5.1",
    "torchvision>=0.22.1",
]
